--- a/src/app/pages/loginpage/loginpage.component.css
+++ b/src/app/pages/loginpage/loginpage.component.css
@@ -10,7 +10,7 @@
 }
 
 body {
-	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
+	background: linear-gradient(90deg, #53dabf, #f04b95);		
 }
 
 .container {
@@ -22,11 +22,11 @@ body {
 }
 
 .screen {		
-	background: linear-gradient(90deg, #a6a2c0, #352cb9db);		
+	background: linear-gradient(90deg, #64eec9, #fc45cbdb);		
 	position: relative;	
 	height: 600px;
 	width: 360px;	
-	box-shadow: 0px 0px 24px #56968c;
+	box-shadow: 0px 0px 24px #bc37ec;
 }
 
 .screen__content {
@@ -54,7 +54,7 @@ body {
 .screen__background__shape1 {
 	height: 520px;
 	width: 520px;
-	background: #FFF;	
+	background: #e9f6f2;	
 	top: -50px;
 	right: 120px;	
 	border-radius: 0 72px 0 0;
@@ -63,7 +63,7 @@ body {
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #6C63AC;	
+	background: #c3f1f0;	
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -72,7 +72,7 @@ body {
 .screen__background__shape3 {
 	height: 540px;
 	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	background: linear-gradient(270deg, #6d5afd, #d17ee5);
 	top: -24px;
 	right: 0;	
 	border-radius: 32px;
@@ -81,7 +81,7 @@ body {
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #7E7BB9;	
+	background: #4f4947;	
 	top: 420px;
 	right: 50px;	
 	border-radius: 60px;
@@ -109,9 +109,9 @@ body {
 	border-bottom: 2px solid #D1D1D4;
 	background: none;
 	padding: 10px;
-	padding-left: 24px;
-	font-weight: 700;
-	width: 75%;
+	padding-left: 25px;
+	font-weight: 500;
+	width: 87%;
 	transition: .2s;
 }
 
@@ -123,7 +123,7 @@ body {
 }
 
 .login__submit {
-	background: #fff;
+	background: #e6fbf3;
 	font-size: 14px;
 	margin-top: 30px;
 	padding: 16px 20px;
@@ -134,8 +134,8 @@ body {
 	display: flex;
 	align-items: center;
 	width: 100%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
+	color: #de4de8;
+	box-shadow: 0px 2px 2px #4d3dd7;
 	cursor: pointer;
 	transition: .2s;
 }
@@ -160,7 +160,7 @@ body {
 	text-align: center;
 	bottom: 0px;
 	right: 0px;
-	color: #fff;
+	color: #f4c4c4;
 }
 
 .social-icons {
@@ -171,7 +171,7 @@ body {
 
 .social-login__icon {
 	padding: 20px 10px;
-	color: #fff;
+	color: #faf9fc;
 	text-decoration: none;	
 	text-shadow: 0px 0px 8px #7875B5;
 }
@@ -180,9 +180,17 @@ body {
 	transform: scale(1.5);	
 }
 .message{
-  color: #0a0a0a;
+  color: #080000;
+  font-weight: 500;
+  font-size: large;
 }
 a{
   text-decoration: none;
-  color: #f3f2f7;
+  color: #f13d06;
+}
+.n{
+	color: #0b0b0b;
+	background-color: #6d5afd;
+	font-style: italic;
+	font-weight: bold;
 }
