--- a/src/app/pages/loginpage/loginpage.component.html
+++ b/src/app/pages/loginpage/loginpage.component.html
@@ -1,4 +1,5 @@
 
+<br>
 
   <div class="container">
     <div class="screen">
@@ -17,7 +18,9 @@
             <i class="button__icon fa fa-chevron-right"></i>
           </button>		<br>
           <p class="message">Not registered? 
-            <a href="signup">SignUp</a></p>		
+            <a href="signup">SignUp</a></p>	
+            <br>
+            <button class="n" (click)="signup()">Logout</button>
         </form>
         <div class="social-login">
           <h3>log in via</h3>
@@ -25,6 +28,8 @@
             <a href="#" class="social-login__icon fa fa-instagram"></a>
             <a href="#" class="social-login__icon fa fa-facebook"></a>
             <a href="#" class="social-login__icon fa fa-twitter"></a>
+            
+           
           </div>
         </div>
       </div>
@@ -36,3 +41,4 @@
       </div>		
     </div>
   </div>
+  
