--- a/src/app/pages/signuppage/signuppage.component.html
+++ b/src/app/pages/signuppage/signuppage.component.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
   <div id="login-box">
     <div class="left">
       <h1>Sign up</h1>
@@ -19,7 +20,6 @@
     </div>
     <div class="or">OR</div>
   </div> 
-
 
    
 
